fix: get first and last elements of decoded